# compiled-language

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  GUIDE.md  LICENSE.md  Makefile  README.md  TODO.md  ast.tree  benchmarks.txt  fact.asm  fact.mbl  grammar.md  heart.asm  ir.json  quad  result.asm  run.cmake
asm/: aplusb-opt.mbasm  aplusb.mbasm  factorial.asm  quad.asm  sqrt.asm
assets/: __cmp_op.asm  __logic_op.asm  stdlib.asm  stdlib.disasm
examples/: aplusb.tyl  example.tyl  factorial.mbl  factorial.tyl  heart.mbl  quad.mbl  quad.tyl  sqrt.mbl  test.tyl
include/array/: _array_macros.h  dynamic_array.h  dynamic_array_impl.h
include/meerkat_args/: argparser.h
include/meerkat_assert/: asserts.h
lib/: CMakeLists.txt
lib/argparser/: CMakeLists.txt  argparser.cpp  argparser.h
lib/ast/: CMakeLists.txt  ast.cpp  ast.h  ast_dsl.cpp  ast_dsl.h  cmp_types.h  logic_types.h  node_types.h  op_types.h
lib/compiler/: CMakeLists.txt  compiler.cpp  compiler.h  size_array.cpp  size_array.h
lib/decompiler/: CMakeLists.txt  decompiler.cpp  decompiler.h
lib/dynamic_array/: dynamic_array_impl.h
lib/lexer/: CMakeLists.txt  lexemes.h  lexer.cpp  lexer.h  lexer_tree.cpp  lexer_tree.h  token_list.cpp  token_list.h
lib/logger/: logger.cpp
lib/math_utils/: CMakeLists.txt  math_utils.h
lib/name_scopes/: CMakeLists.txt  func_array.cpp  func_array.h  table_stack.cpp  table_stack.h  var_table.h
lib/parser/: CMakeLists.txt  derivative.cpp  derivative.h  parser.cpp  parser.h
lib/simplifier/: CMakeLists.txt  simplifier.cpp  simplifier.h
lib/text_lines/: text_lines.h
lib/var_table/: CMakeLists.txt  var_table.cpp
output/: listing.txt  result
results/asm/: quad.mbasm
results/disasm/: example.disasm
results/trees/: aplusb.ast  ast_factorial.txt  example.ast  heart.ast  quad.ast  test.ast
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  back_flags.cpp  back_flags.h  back_utils.cpp  back_utils.h  main.cpp
src/compiler/: compiler.cpp  compiler.h  ir_bin_cvt.cpp  ir_bin_cvt.h  size_array.cpp  size_array.h
src/data_structures/ast/: ast.cpp  ast.h  ast_dsl.h
src/data_structures/intermediate_repr/: ir.cpp  ir.h  ir_dsl.h
src/data_structures/name_scopes/: func_array.cpp  func_array.h  table_stack.cpp  table_stack.h  var_table.cpp  var_table.h
src/data_structures/token_list/: token_list.cpp  token_list.h
src/data_structures/types/: lexemes.h  op_types.h
src/decompiler/: decompiler.cpp  decompiler.h
src/frontend/: CMakeLists.txt  front_flags.cpp  front_flags.h  front_utils.cpp  front_utils.h  main.cpp
src/frontend/lexer/: lexer.cpp  lexer.h  lexer_tree.cpp
src/lexer/: lexer.cpp  lexer.h  lexer_tree.cpp  lexer_tree.h
src/midend/: CMakeLists.txt  main.cpp  mid_flags.cpp  mid_flags.h  mid_utils.cpp  mid_utils.h
src/parser/: derivative.cpp  derivative.h  parser.cpp  parser.h
src/simplifier/: simplifier.cpp  simplifier.h
src/tlc/backend/: back_flags.cpp  back_flags.h  back_utils.cpp  back_utils.h  main.cpp
src/tlc/frontend/: front_flags.cpp  front_flags.h  front_utils.cpp  front_utils.h  main.cpp
src/tlc/midend/: main.cpp  mid_flags.cpp  mid_flags.h  mid_utils.cpp  mid_utils.h
src/util/logger/: logger.h  text_styles.h
src/util/text_lines/: text_lines.cpp
standard/: LICENSE.md  README.md
tests/: main.cpp
tests/test_cases/: benchmark.cpp  benchmark.h
tests/test_utils/: config.cpp  config.h  display.cpp  display.h  math.cpp  math.h
trees/: aplusb-opt.ast  factorial.ast  quad.ast  sqrt.ast  test.ast
